TEST_PROGRAMS/VALID/09/blank_ids.go
package blank_id

func main() {
    a, _ = 3, 6
}
