TEST_PROGRAMS/INVALID/09/blank_append.go
package blank_append

func main() {
    a := append(_, 3)
}
